--- a/index.html
+++ b/index.html
@@ -3,23 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Faites vos achats en ligne en toute sécurité."
-    />
-    <meta name="author" content="Elfried Fortunatus KIDJE" />
+    <meta name="description" content="Shop online safely." />
+    <meta name="author" content="Kailash G" />
     <title>CMart</title>
     <meta property="og:title" content="FriedShop" />
-    <meta property="og:url" content="https:://friedshop.vercel.app" />
+    <meta property="og:url" content="" />
     <meta
       property="og:description"
       content="CMart is a One stop place to buy all construction raw materials"
     />
     <meta property="og:image" content="./favicon-32x32.png" />
-    <!-- Balises Twitter Card pour le partage sur Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@FriedShop" />
-    <meta name="twitter:title" content="TodoApp" />
+    <meta name="twitter:site" content="@CMart" />
+    <meta name="twitter:title" content="Ecommerce" />
     <meta
       name="twitter:description"
       content="CMart is a One stop place to buy all construction raw materials"
@@ -46,13 +42,13 @@
         navigator.serviceWorker
           .register("./service-worker.js")
           .then(function (registration) {
-            console.log("Service Worker enregistré avec succès:", registration);
+            console.log(
+              "Service Worker registered successfully:",
+              registration
+            );
           })
           .catch(function (error) {
-            console.log(
-              "Erreur lors de l'enregistrement du Service Worker:",
-              error
-            );
+            console.log("Error registering Service Worker:", error);
           });
       }
     </script>
