--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Shop online safely." />
     <meta name="author" content="Kailash G" />
     <title>CMart</title>
-    <meta property="og:title" content="FriedShop" />
+    <meta property="og:title" content="CMart" />
     <meta property="og:url" content="" />
     <meta
       property="og:description"
@@ -20,10 +20,10 @@
       name="twitter:description"
       content="CMart is a One stop place to buy all construction raw materials"
     />
-    <meta
+    <!-- <meta
       name="twitter:image"
       content="https:://friedshop.vercel.app/favicon-32x32.png"
-    />
+    /> -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
