--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Shop online safely." />
     <meta name="author" content="Kailash G" />
-    <title>CMart</title>
+    <title>KVM CMart</title>
     <meta property="og:title" content="CMart" />
     <meta property="og:url" content="" />
     <meta
       property="og:description"
-      content="CMart is a One stop place to buy all construction raw materials"
+      content="KVM CMart is a One stop place to buy all construction raw materials"
     />
     <meta property="og:image" content="./favicon-32x32.png" />
     <meta name="twitter:card" content="summary_large_image" />
@@ -18,12 +18,12 @@
     <meta name="twitter:title" content="Ecommerce" />
     <meta
       name="twitter:description"
-      content="CMart is a One stop place to buy all construction raw materials"
+      content="KVM CMart is a One stop place to buy all construction raw materials"
     />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/friedshop.webmanifest" />
+    <!-- <link rel="manifest" href="/friedshop.webmanifest" /> -->
   </head>
 
   <body>
